# Pose-estimation_cpp

./: .gitignore  CMakeLists.txt  readme.md  requirements.txt  run.sh
include/: config.hpp  detector_base.hpp  detector_onnx.hpp  pipeline.hpp  smoother.hpp
models/: head_cpp.txt
src/: detector_onnx.cpp  grid.py  main.cpp  pipeline.cpp
tools/: auto_label.py  export_head.py  export_model.py  extract_features.py  grid.py  roi_picker.py  run.py  train_head.py  validate_head.py  verify_roi.py
